# MKProj

./: Cargo.toml  Dockerfile  Rocket.toml  github_btns.toml  index.html  pages.html  projects.html  resume.html
assets/: style.css
src/: github_proj.rs  lib.rs  main.rs
static/: style.css
templates/: head.html.tera  index.html.tera  nav.html.tera  projects.html.tera
