[package]
name = "mkproj_com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "mkproj_web"
path = "src/bin/web.rs"

[[bin]]
name = "mkproj_api"
path = "src/bin/api.rs"


[dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.11.22", features = ["json"] }
rocket = "0.5.0-rc.3"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.2"

